--- a/html/dirty-flag.html
+++ b/html/dirty-flag.html
@@ -341,20 +341,20 @@ turn up uses of this pattern.</p>
 </aside>
 
 <h2><a href="#design-decisions" name="design-decisions">Design Decisions</a></h2>
-<p>This pattern is fairly specific, so there are only a couple of knobs to twiddle on it:</p>
+<p>This pattern is fairly specific, so there are only a couple of knobs to twiddle:</p>
 <h3><a href="#when-is-the-dirty-flag-cleaned" name="when-is-the-dirty-flag-cleaned">When is the dirty flag cleaned?</a></h3>
 <ul>
 <li>
-<p><strong>If you defer it until the result is needed:</strong></p>
+<p><strong>When the result is needed:</strong></p>
 <ul>
 <li>
 <p><em>It avoids doing calculation entirely if the result is never used.</em> For
-    primary data that changes frequently and where the derived data is
-    rarely accessed, this can be a big win.</p>
+    primary data that changes much more frequently than the derived data is
+    accessed, this can be a big win.</p>
 </li>
 <li>
 <p><em>If the calculation is time-consuming, it can cause a noticeable pause.</em>
-    Postponing the work until the end-user is waiting to see the result can
+    Postponing the work until the player is expecting to see the result can
     affect their gameplay experience. Often, it&#x2019;s fast enough that this
     isn&#x2019;t a problem, but if it is, you&#x2019;ll have to do the work earlier.</p>
 </li>
@@ -363,32 +363,31 @@ turn up uses of this pattern.</p>
 <li>
 <p><strong>At well-defined checkpoints:</strong></p>
 <p>Sometimes there is a point in time or the progression of the game where it&#x2019;s
-natural to do the deferred synchronization or calculation. For example,
+natural to do the deferred processing. For example,
 we may want to save the game only when the pirate sails into port. Or the
 sync point may not part of the game mechanics. We may just want to hide the
 work behind a loading screen or a cut scene.</p>
 <ul>
 <li>
-<p><em>You can ensure the time spent doing the work doesn&#x2019;t impact the user
-    experience.</em> Unlike the above option, you can often give something to
-    distract the player while the game is busy on other things.</p>
+<p><em>Doing the work doesn&#x2019;t impact the user experience.</em> Unlike the above
+  option, you can often give something to
+    distract the player while the game is busy processing.</p>
 </li>
 <li>
-<p><em>You lose control of when the work actually happens.</em> This is sort of the
-    opposite of the above point. You have micro-scale control over when the
-    work happens, and can make sure the game handles it gracefully.</p>
+<p><em>You lose control over when the work happens.</em> This is sort of the
+    opposite of the above point. You have micro-scale control over when you
+    process, and can make sure the game handles it gracefully.</p>
 <p>What you <em>can&#x2019;t</em> do is ensure the player actually makes it to the
 checkpoint or meets whatever criteria you&#x2019;ve defined. If they get lost
-or the game gets in a weird state, you can end up deferring the work
-longer than you expected.</p>
+or the game gets in a weird state, you can end up deferring
+longer than you expect.</p>
 </li>
 </ul>
 </li>
 <li>
 <p><strong>In the background:</strong></p>
-<p>Like your text editor that auto-saves a backup every few minutes, you can
-do the work after some time interval. Usually, you&#x2019;ll start the <span name="hysteresis">timer</span>
-on the first modification and then process all of the changes that happened
+<p>Usually, you start a fixed <span name="hysteresis">timer</span>
+on the first modification and then process all of the changes that happen
 between then and when the timer fires.</p>
 <aside name="hysteresis">
 
@@ -398,25 +397,22 @@ when a program receives user input and when it responds is <a href="http://en.wi
 
 <ul>
 <li>
-<p><em>You can tune how often the work is performed.</em> Since the time
-    when we clean the dirty state and do the work isn&#x2019;t dependent on
-    the player requesting some data or reaching some checkpoint, we can
-    ensure it happens as frequently (or infrequently) as we want.</p>
+<p><em>You can tune how often the work is performed.</em> By adjusting the timer
+    interval you can ensure it happens as frequently (or infrequently) as
+    you want.</p>
 </li>
 <li>
 <p><em>You can do more redundant work.</em> If the primary state only changes a
-    tiny amount during the timer&#x2019;s run and our dirty flags are
-    coarse-grained, we&#x2019;ll process a bunch of data that hasn&#x2019;t
-    changed. When changes trickle in, that timer will constantly be
-    triggering work over data that hasn&#x2019;t changed much again and again.</p>
+    tiny amount during the timer&#x2019;s run you can end up processing a large
+    chunk of mostly unchanged data.</p>
 </li>
 <li>
-<p><em>You&#x2019;ll need some support for doing work asynchronously.</em>
+<p><em>You need support for doing work asynchronously.</em>
     Processing the data "in the background" implies that the player can
     keep doing whatever it is that they&#x2019;re doing at the same time. That
-    means we&#x2019;ll likely need threading or some other kind of concurrency
-    support so that the work we&#x2019;re doing can happen while the game is still
-    responsive and being played.</p>
+    means you&#x2019;ll likely need threading or some other kind of concurrency
+    support so that the game can work on the data while it&#x2019;s still
+    being played.</p>
 <p>Since the player is likely interacting with
 the same primary state that you&#x2019;re processing, you&#x2019;ll need to think
 about making that safe for concurrent modification too.</p>
@@ -429,22 +425,16 @@ about making that safe for concurrent modification too.</p>
 <ul>
 <li>
 <p><strong>If it&#x2019;s more fine-grained:</strong></p>
-<p>Say we slap a dirty flag on each tiny plank of each deck.</p>
+<p>Say you slap a dirty flag on each tiny plank of each deck.</p>
 <ul>
-<li>
-<p><em>You only process data that actually changed.</em> We&#x2019;ll send exactly the
-    facets of the ship that were modified to the server.</p>
-</li>
-<li>
-<p><em>When a lot of data changes, a larger number of dirty flags also need to
-    be set.</em></p>
-</li>
+<li><em>You only process data that actually changed.</em> You&#x2019;ll send exactly the
+    facets of the ship that were modified to the server.</li>
 </ul>
 </li>
 <li>
 <p><strong>If it&#x2019;s more coarse-grained:</strong></p>
 <p>Alternatively, we could associate a dirty bit with each deck.
-Changing anything on that deck marks the entire deck <span name="swab">dirty</span>.</p>
+Changing anything on it marks the entire deck <span name="swab">dirty</span>.</p>
 <aside name="swab">
 
 <p>I could make some terrible joke about it needing to be swabbed here, but
@@ -454,7 +444,7 @@ I&#x2019;ll refrain.</p>
 <ul>
 <li>
 <p><em>You end up processing unchanged data.</em> Add a single barrel to a deck
-    and we&#x2019;ll have to send the whole thing to the server.</p>
+    and you&#x2019;ll have to send the whole thing to the server.</p>
 </li>
 <li>
 <p><em>Less memory is used for storing dirty flags.</em></p>
@@ -465,7 +455,7 @@ I&#x2019;ll refrain.</p>
    data itself. In the example here, that&#x2019;s the metadata required to
    identify where on the ship the changed data is. The bigger your
    processing chunks, the fewer of them there are, which means the less
-   fixed overhead you have.</p>
+   overhead you have.</p>
 </li>
 </ul>
 </li>
@@ -473,13 +463,13 @@ I&#x2019;ll refrain.</p>
 <h2><a href="#see-also" name="see-also">See Also</a></h2>
 <ul>
 <li>
-<p>This pattern is increasingly common outside of games in client-side MVC
-    web frameworks like <a href="http://angularjs.org/">Angular</a> which use dirty
+<p>This pattern is common outside of games in browser-side web frameworks like
+    <a href="http://angularjs.org/">Angular</a>. They use dirty
     flags to track which data has been changed in the browser and needs to
     be pushed up to the server.</p>
 </li>
 <li>
-<p>Physics engines keep track of which objects are resting and which are in motion. Since a resting body won&#x2019;t move until an impulse is applied to it, they don&#x2019;t need any processing until they get touched. This "is resting" bit is essentially a dirty flag to track which objects have had forces applied and need to have their physics resolved.</p>
+<p>Physics engines track which objects are in motion and which are resting. Since a resting body won&#x2019;t move until an impulse is applied to it, they don&#x2019;t need processing until they get touched. This "is moving" bit is a dirty flag to note which objects have had forces applied and need to have their physics resolved.</p>
 </li>
 </ul>
 <p class="footer">&copy; 2009-2013 Bob Nystrom</p>
