--- a/html/dirty-flag.html
+++ b/html/dirty-flag.html
@@ -365,7 +365,7 @@ turn up uses of this pattern.</p>
 <p>Sometimes there is a point in time or the progression of the game where it&#x2019;s
 natural to do the deferred processing. For example,
 we may want to save the game only when the pirate sails into port. Or the
-sync point may not part of the game mechanics. We may just want to hide the
+sync point may not be part of the game mechanics. We may just want to hide the
 work behind a loading screen or a cut scene.</p>
 <ul>
 <li>
