--- a/html/component.html
+++ b/html/component.html
@@ -907,7 +907,7 @@ it a reference to his corresponding <code>PhysicsComponent</code>.</p>
 </li>
 <li>
 <p><em>The two components are tightly coupled.</em> The downside of the
-    free-for-fall. We&#x2019;ve basically taken a step back towards our
+    free-for-all. We&#x2019;ve basically taken a step back towards our
     monolithic class. It&#x2019;s not quite as bad as the original single
     class though, since we&#x2019;re at least restricting the coupling to
     just the component pairs that need to interact.</p>
