First draft intro for sequencing patterns.

--- a/html/index.html
+++ b/html/index.html
@@ -73,7 +73,7 @@
   </li>
   <li>Game Programming Patterns
       <ul>
-          <li>Sequencing Patterns
+          <li><a href="sequencing-patterns.html">Sequencing Patterns</a>
               <ul>
                   <li><a href="game-loop.html">Game Loop</a></li>
                   <li><a href="update-method.html">Update Method</a></li>
