--- a/html/game-loop.html
+++ b/html/game-loop.html
@@ -22,7 +22,7 @@
 </head>
 <body id="top">
 <div class="content">
-<h1 class="book"><a href="index.html">Game Programming Patterns</a> / Sequencing Patterns</h1>
+<h1 class="book"><a href="index.html">Game Programming Patterns</a> / <a href="sequencing-patterns.html">Sequencing Patterns</a></h1>
 <h1>Game Loop</h1>
 <div class="in-progress">
   <span class="dismiss">&times;</span>
