--- a/html/flyweight.html
+++ b/html/flyweight.html
@@ -62,6 +62,56 @@
   </table>
 </div>
 <p><em>Sorry, this chapter hasn&#x2019;t been written yet!</em></p>
+<p>http://sourcemaking.com/design_patterns/flyweight</p>
+<p>"Extrinsic state is stored or computed by client objects, and passed to the Flyweight when its operations are invoked."</p>
+<ul>
+<li>
+<p>in other words, can make flyweight operations context-free by passing in context.</p>
+</li>
+<li>
+<p>some overlap with type object. both patterns delegate some of object&#x2019;s definition
+  to other shared object.</p>
+</li>
+</ul>
+<p>http://javapapers.com/design-patterns/flyweight-design-pattern/
+"Flyweight is used when there is a need to create high number of objects of almost similar nature. High number of objects consumes high memory and flyweight design pattern gives a solution to reduce the load on memory by sharing objects. It is achieved by segregating object properties into two types intrinsic and extrinsic."</p>
+<ul>
+<li>pattern is sort of about saving memory, but memory is cheap</li>
+<li>however, cache is not</li>
+</ul>
+<p>gof:
+"Facilitates the reuse of many fine grained objects, making the utilization of large numbers of objects more efficient."</p>
+<ul>
+<li>
+<p>got refers to "instrinsic" and "extrinsic" state. prefer "contextual" and "context-independent".</p>
+</li>
+<li>
+<p>common place where pattern is used in games</p>
+</li>
+<li>explain instanced rendering</li>
+<li>key concepts: separate out data specific to single object in world (transform)
+    from data it has in common with others (mesh)</li>
+<li>then reuse the latter</li>
+<li>talk about how rendering api supports instanced rendering directly: hardware
+    understands flyweight pattern.</li>
+<li>then say, that&#x2019;s general idea, here&#x2019;s other application</li>
+<li>tiles or other places where you&#x2019;d use an enum and lots of switches</li>
+<li>can instead do a pointer</li>
+<li>talk about perf of pointer chasing, field lookup, virtual method invoke</li>
+<li>
+<p>discuss using flyweight both for data and for behavior</p>
+</li>
+<li>
+<p>flyweights almost always immutable: if you change it, everything that uses it
+  will change</p>
+</li>
+<li>
+<p>create them upfront or as needed? if latter, think about threading</p>
+</li>
+<li>
+<p>compare to string interning</p>
+</li>
+</ul>
 <p class="footer">&copy; 2009-2013 Bob Nystrom</p>
 </div>
 </body>
