Fix typo in Singleton.

--- a/html/singleton.html
+++ b/html/singleton.html
@@ -78,7 +78,7 @@ go over the pattern itself.</p>
 <p>When much of the industry moved to object-oriented programming from C, one
 problem they ran into was "how do I get an instance?" They had some method they
 wanted to call, but didn&#x2019;t have an instance of the object that provides that
-method in hand. Singletons (in other words, making it global) was an easy way out.</p>
+method in hand. Singletons (in other words, making it global) were an easy way out.</p>
 </aside>
 
 <h2><a href="#the-singleton-pattern" name="the-singleton-pattern">The Singleton Pattern</a></h2>
